--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,13 @@ dependencies:
   dio: ^4.0.6
   flutter:
     sdk: flutter
+  flutter_animate: ^3.1.0
+  flutter_dotenv: ^5.0.2
+  flutter_tts: ^3.6.3
+  http: ^0.13.5
+  provider: ^6.0.5
   speech_to_text: ^6.1.1
-  uuid:
+  uuid: null
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -52,6 +57,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - bot.jpg
+    - .env
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
