--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,49 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+
+/.env
+linux/*
+mac/*
+windows/*
+web/*
+linux/my_application.cc
+linux/my_application.h
+linux/flutter/CMakeLists.txt
+linux/main.cc
+linux/CMakeLists.txt
+linux/.gitignore
+linux/flutter/generated_plugin_registrant.cc
+linux/flutter/generated_plugin_registrant.h
+linux/flutter/generated_plugins.cmake
+macos/.gitignore
+macos/Flutter/Flutter-Debug.xcconfig
+macos/Flutter/Flutter-Release.xcconfig
+macos/Runner/AppDelegate.swift
+macos/Flutter/GeneratedPluginRegistrant.swift
+macos/Runner/DebugProfile.entitlements
+macos/Runner/Info.plist
+macos/Runner/MainFlutterWindow.swift
+macos/Runner/Release.entitlements
+macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_16.png
+macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_32.png
+macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_64.png
+macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_128.png
+macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_256.png
+macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_512.png
+macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_1024.png
+macos/Runner/Assets.xcassets/AppIcon.appiconset/Contents.json
+macos/Runner/Base.lproj/MainMenu.xib
+macos/Runner/Configs/AppInfo.xcconfig
+macos/Runner/Configs/Debug.xcconfig
+macos/Runner/Configs/Release.xcconfig
+macos/Runner/Configs/Warnings.xcconfig
+.gitignore
+windows/runner/resources/app_icon.ico
+windows/runner/win32_window.h
+windows/runner/win32_window.cpp
+windows/runner/utils.cpp
+windows/runner/utils.h
+windows/runner/runner.exe.manifest
+windows/runner/Runner.rc
