add two package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   flutter_dotenv: ^5.0.2
   flutter_tts: ^3.6.3
   http: ^0.13.5
+  loading_indicator: ^3.1.0
   provider: ^6.0.5
+  share_plus: ^6.3.0
   speech_to_text: ^6.1.1
   uuid: null
 
