--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,24 +29,30 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cancellation_token_http: ^1.2.0
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
   flutter:
     sdk: flutter
   flutter_animate: ^3.1.0
   flutter_dotenv: ^5.0.2
+  flutter_list_view: ^1.1.21
   flutter_tts: ^3.6.3
-  http: ^0.13.5
+  hive: ^2.2.3
   loading_indicator: ^3.1.0
+  path_provider: ^2.0.12
+  permission_handler: ^10.2.0
   provider: ^6.0.5
   share_plus: ^6.3.0
   speech_to_text: ^6.1.1
   uuid: ^3.0.7
 
 dev_dependencies:
+  build_runner: ^2.3.3
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
